--- a/css/style.css
+++ b/css/style.css
@@ -20,14 +20,6 @@ img {
     position: absolute;
 }
 
-.bold {
-    font-weight: bold;
-}
-
-.retina {
-    font-family: 'Monoid Retina';
-}
-
 h1 {
     font-size: 300px;
     color: #000000;
@@ -81,12 +73,131 @@ div {
     font-weight: normal;
 }
 
+.bold {
+    font-weight: bold;
+}
+
+.retina {
+    font-family: 'Monoid Retina';
+}
+
 .circle {
     width: 182px;
     height: 182px;
     border-radius: 50%;
     background-color: #790606;
     position: absolute;
+}
+
+.redrectangle {
+    background-color: #790606;
+    position: absolute;
+}
+
+.glyphs{
+    position: absolute;
+    left: 166px;
+    top: 5593px;
+    display: grid;
+    grid-template-columns: repeat(12, 120px);
+    grid-template-rows: repeat(11, 120px);
+    column-gap: 0px;
+    row-gap: 0px;
+}
+
+.glyphs1{
+    background-image: url("../images/glyphsback.png");
+    background-size: contain;
+}
+
+.glyph{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-size: 65px;
+    justify-content: center;
+    width: 100%;
+    background-image: url("../images/glyphsback.png");
+    background-size: contain;
+}
+
+.redgl {
+    background-color: #790606;
+}
+
+.glyphsletter {
+    position: absolute;
+    font-size: 100px;
+    font-weight: bold;
+}
+
+.specials{
+    position: absolute;
+    left: 60px;
+    top: 7051px;
+    display: grid;
+    grid-template-columns: repeat(4, 316px);
+    grid-template-rows: repeat(3, 524px);
+    column-gap: 44.86px;
+    row-gap: 17.33px;
+}
+
+.special{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    border-top-left-radius: 210px;
+    border-top-right-radius: 210px;
+    font-size: 205px;
+    color: #FFFFFF;
+    position: relative;
+}
+
+.windows {
+    background-color: rgba(0, 0, 0, 0.25); 
+    border: 6px solid #790606;
+    position: absolute;
+}
+
+
+.backgroundexamples {
+    background-color: #B7B7B7;
+    position: absolute;
+}
+
+.square {
+    background-color: #790606;
+    height: 55px;
+    width: 55px;
+    position: relative;
+}
+
+.block {
+    font-size: 70px;
+    font-weight: normal;
+    position: relative;
+}
+
+.square1 {
+    background-color: #790606;
+    height: 58px;
+    width: 58px;
+    position: relative;
+}
+
+.building {
+    font-size: 70px;
+    font-weight: normal;
+    position: relative;
+}
+
+.phone {
+    font-size: 70px;
+    font-weight: bold;
+    position: relative;
+    color: #B7B7B7;
 }
 
 #cover {
@@ -209,11 +320,6 @@ div {
     left: 825px; 
 }
 
-.redrectangle {
-    background-color: #790606;
-    position: absolute;
-}
-
 #Beograd1 {
     top: 3899px;
     left: 415px;
@@ -284,44 +390,6 @@ div {
     top: 5541px;
 }
 
-.glyphs{
-    position: absolute;
-    left: 166px;
-    top: 5593px;
-    display: grid;
-    grid-template-columns: repeat(12, 120px);
-    grid-template-rows: repeat(11, 120px);
-    column-gap: 0px;
-    row-gap: 0px;
-}
-
-.glyphs1{
-    background-image: url("../images/glyphsback.png");
-    background-size: contain;
-}
-
-.glyph{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    font-size: 65px;
-    justify-content: center;
-    width: 100%;
-    background-image: url("../images/glyphsback.png");
-    background-size: contain;
-}
-
-.redgl {
-    background-color: #790606;
-}
-
-.glyphsletter {
-    position: absolute;
-    font-size: 100px;
-    font-weight: bold;
-}
-
 #g {
     left: 379px;
     top: 5890.5px;
@@ -352,29 +420,6 @@ div {
     color:#790606;
     font-size: 25px;
     top: 6926px;
-}
-
-.specials{
-    position: absolute;
-    left: 60px;
-    top: 7051px;
-    display: grid;
-    grid-template-columns: repeat(4, 316px);
-    grid-template-rows: repeat(3, 524px);
-    column-gap: 44.86px;
-    row-gap: 17.33px;
-}
-
-.special{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    border-top-left-radius: 210px;
-    border-top-right-radius: 210px;
-    font-size: 205px;
-    color: #FFFFFF;
-    position: relative;
 }
 
 #special1 {
@@ -408,12 +453,6 @@ div {
 
 #special8 {
     background: linear-gradient(-14deg, #B7B7B7, #505050);
-}
-
-.windows {
-    background-color: rgba(0, 0, 0, 0.25); 
-    border: 6px solid #790606;
-    position: absolute;
 }
 
 #window1 {
@@ -484,11 +523,6 @@ div {
     top: 10149px;
 }
 
-.backgroundexamples {
-    background-color: #B7B7B7;
-    position: absolute;
-}
-
 #backgroundexamples1 {
     top: 9233px;
     left: 520px;
@@ -557,13 +591,6 @@ div {
     top: 109px;
 }
 
-.square {
-    background-color: #790606;
-    height: 55px;
-    width: 55px;
-    position: relative;
-}
-
 #redsquares {
     position: relative;
     display: flex;
@@ -579,12 +606,6 @@ div {
     flex-direction: column;
     bottom: 536px;
     left: 477px;
-}
-
-.block {
-    font-size: 70px;
-    font-weight: bold;
-    position: relative;
 }
 
 #tel1 {
@@ -604,13 +625,6 @@ div {
     left: 125px;
 }
 
-.square1 {
-    background-color: #790606;
-    height: 58px;
-    width: 58px;
-    position: relative;
-}
-
 #redsquares1 {
     position: relative;
     display: flex;
@@ -627,12 +641,6 @@ div {
     bottom: 263px;
     left: 160px;
     gap: 42px;
-}
-
-.building {
-    font-size: 70px;
-    font-weight: bold;
-    position: relative;
 }
 
 #photobuilding {
@@ -654,11 +662,4 @@ div {
     bottom: 208px;
     left: 25px;
     gap: 20px;
-}
-
-.phone {
-    font-size: 70px;
-    font-weight: bold;
-    position: relative;
-    color: #B7B7B7;
 }
